# mmm_output

mmm_output/: command_parser.c  command_parser.h  main.c  main.h  new_main.c  playlist_player.c  playlist_player.h
mmm_output.xcodeproj/: project.pbxproj
mmm_output.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mmm_output_kdevelop/: CMakeLists.txt  Toolchain-RaspberryPi.cmake  mmm_output_kdevelop.kdev4
